refactor: new design of agents and their tasks
- Integrated hybrid Research logic (Document and  Web Search).
- Researcher now uses system-time to improve local LLM reasoning and data freshness.
- Improved LLM Factory with agent-specific temperatures.

--- a/src/ba_ragmas_chatbot/config/agents.yaml
+++ b/src/ba_ragmas_chatbot/config/agents.yaml
@@ -5,7 +5,7 @@ researcher:
     Gather comprehensive, verified information from local documents AND the web to build a solid knowledge base.
   backstory: >
     You are a meticulous researcher who doesn't trust assumptions. You first check the provided local documents. 
-    If information is missing or outdated (current year is 2025/2026), you actively search the web to fill the gaps. 
+    If information is missing or outdated (current date is {current_date}), you actively search the web to fill the gaps. 
     You despise ambiguity and only deliver verified facts.
 
 editor:
