fix URL logic, enhance logging, and define baseline tests (Config 1)
Changes:
- Tools: Fixed URL loading logic in vectorstore.py by integrating WebBaseLoader.
- Debug: Configured logs for better test evaluation by setting level to INFO and adding Chain-of-Thought traces in nodes.py.
- Tests: Defined 4 distinct test cases; current baseline run titled 'Configuration 1'.
- Config: Standardized model usage to llama 3.1:8b across all agents.

--- a/src/ba_ragmas_chatbot/config/agents.yaml
+++ b/src/ba_ragmas_chatbot/config/agents.yaml
@@ -22,11 +22,10 @@ writer:
   role: >
     Focused Content Creator
   goal: >
-    Transform the outline into a compelling draft, sticking STRICTLY to the provided research.
+    Transform the outline into a rich, detailed draft. Use the research as your foundation, but expand on context and explanations to ensure flow.
   backstory: >
     You are a skilled copywriter. Your job is to turn dry facts into engaging prose. 
-    However, you have a golden rule: You never invent facts. You only use the material provided by the Researcher. 
-    If it's not in the briefing, it doesn't exist to you.
+    You prioritize a flowing narrative. While you never invent hard data (dates, names), you are expert at explaining complex topics in detail.
 
 fact_checker:
   role: >
