--- a/Test_Cases/Configuration 1/tasks.yaml
+++ b/Test_Cases/Configuration 1/tasks.yaml
@@ -4,15 +4,13 @@ research_task:
     2. Search the local vector store for documents.
     3. IF the documents are insufficient or the topic requires current data, use the Web Search Tool.
     4. Compile everything into a structured "Research Briefing".
-    5. IMPORTANT: Identify the source of every fact (Local Document vs. Web Search).
     Context: {history}
   expected_output: >
-    A structured briefing containing ONLY:
-    - Key Facts & Figures (with source indication)
+    A comprehensive briefing containing:
+    - Key Facts & Figures
     - Context/Background info
-    - Relevant Quotes
+    - Relevant Quotes (if found)
     - Sources list
-    DO NOT add any conversational filler like "Here is the briefing".
   agent: researcher
 
 editor_task:
@@ -24,11 +22,10 @@ editor_task:
     - Target Audience: {target_audience}
     - Tone: {tone}
   expected_output: >
-    A structural plan (Markdown) where each section includes:
+    A structural plan where each section includes:
     - Section Headline
     - Core Bullet points to cover
     - Style instructions for the writer
-    Output ONLY the outline. No intro, no outro.
   agent: editor
 
 writer_task:
@@ -37,8 +34,7 @@ writer_task:
     Do NOT use outside knowledge. Stick to the briefing.
     Language: {language}
   expected_output: >
-    A raw draft of the blog post (Markdown).
-    Output ONLY the article text. Do NOT write "Here is the draft" or "I wrote this based on...".
+    A raw draft of the blog post (Markdown)
   agent: writer
 
 fact_check_task:
@@ -47,11 +43,9 @@ fact_check_task:
     Check for:
     1. Hallucinations (claims not in research)
     2. Logical errors
-    If you find errors, SILENTLY correct the text based on the Briefing.
-    Do NOT list the errors you found.
+    If you find errors, correct the text based on the Briefing.
   expected_output: >
-    The corrected draft text (Markdown).
-    Output ONLY the final text. NO "Changes made" section. NO "I corrected the following...".
+    A fact-checked version of the draft text.
   agent: fact_checker
 
 polishing_task:
@@ -61,8 +55,6 @@ polishing_task:
     - Apply the requested Tone ({tone}).
     - Ensure perfect Markdown (Headers, Lists, Bold text).
     - Check grammar for language: {language}.
-    - IMPORTANT: Remove any remaining meta-comments or internal notes from previous agents.
   expected_output: >
     The final, polished blog post ready for publishing.
-    Output ONLY the final content. NO conversational filler.
   agent: polisher
